# ffbtool

./: .gitignore  CMakeLists.txt  README.md  devices_dump.hexpat  ffbtool.hexproj  imgui.ini  report_descriptor.hexpat  vcpkg.json
.github/workflows/: build.yml
src/: ffbtool.cxx  hid.cxx  hid.hxx  hid_descriptor.cxx  hid_descriptor.hxx  imgui.ini  tools.cxx  tools.hxx  unit.cxx  unit.hxx
src/ui/: imgui.ini  ui.cxx  ui.hxx  ui_win32.cxx
src/ui/imgui/: imgui.ini
src/widgets/: pov_hat.cxx  pov_hat.hxx
